# throne-of-anhu

./: README.md  additional_lexicons.py  admin_routes.py  amharic_lexicon.py  ancient_prayers.py  arabic_lexicon.py  auth.py  bible_answer.py  bible_library.py  chinese_lexicon.py  config.py  conversation_memory.py  database.py  db_models.py  email_service.py  french_lexicon.py  fuzzy_match.py  gallery_routes.py  gita_answer.py  gita_library.py  hebrew_lexicon.py  hindi_lexicon.py  historical_disambiguation.py  holy_of_holies.py  kiswahili_lexicon.py  knowledge.json  knowledge_store.py  local_storehouse.py  main.py  masowe_routes.py  models.py  multilingual_lexicon.py  nigerian_lexicon.py  offer_policy.py  open.py  papyrus_ani.json  papyrus_answer.py  papyrus_library.py  parse_abasid_caliphate.py  parse_nhoroondo.py  (+35 more)
allscrolls.json/: abasid_1841_scrolls.json  scrolls.json
sources/: abasid_scrolls_manifest.json  ancient_prayers.json  baba_johani_life.json  bhagavad_gita.json  gospel_god_church_baba_johane.json  gospel_of_cyrus.json  i_am_truth.json  masowe_history.json  nhoroondo_chronicle.json  papyrus_of_ani.json  power_of_trinity.json  quran.json  torah.json  true_exodus.json
sources/planet_1_saturn_scriptures/: bible_nt.json  hebrew_torah.json  kebra_nagast.json  mystical_wisdom.json  wisdom_teachings.json
sources/planet_2_jupiter_abasid/: abasid_1841_laws.json  abasid_mathematics_of_god.json  abasid_scrolls_manifest.json  book_of_asar.json  book_of_life_1841.json  book_of_new_calendar.json  (+14 more)
static/: app.js  index.html  manifest.json  persona.js  styles.css  sw.js
(+36 files in other folders)
