[project]
name = "throne-of-anhu"
version = "0.1.0"
description = "Throne of Anhu · ABASID 1841"
authors = ["ABASID 1841 <abasid1841@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.122.0",
    "openai>=2.8.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
    "httpx>=0.27.0",
    "future>=1.0.0",
    "sqlalchemy>=2.0.45",
    "psycopg2-binary>=2.9.11",
    "python-jose>=3.5.0",
    "jose>=1.0.0",
    "stripe>=14.0.1",
    "itsdangerous>=2.2.0",
    "authlib>=1.6.6",
    "pillow>=12.0.0",
    "python-multipart>=0.0.21",
    "pypdf>=6.5.0",
    "websockets>=15.0.1",
]
